--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+body::-webkit-scrollbar {
+  display: none;
 }
